<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="72sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/current_temp"
        app:layout_constraintStart_toStartOf="@id/current_temp" />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/sun_icon"
        android:importantForAccessibility="no"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp"
        app:layout_constraintBottom_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        android:text="@string/low"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/feels_like"
        app:layout_constraintTop_toBottomOf="@id/feels_like" />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/low"
        app:layout_constraintStart_toStartOf="@id/low" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/high"
        app:layout_constraintStart_toStartOf="@id/high" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintStart_toStartOf="@id/humidity" />








</androidx.constraintlayout.widget.ConstraintLayout>