<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp">

    <ImageView
        android:id="@+id/forecast_item_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/sun_icon"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/forecast_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/forecast_item_icon"
        tools:text="Jan 1" />

<!--    <TextView-->
<!--        android:id="@+id/forecast_current_temp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:textSize="15sp"-->
<!--        android:text="@string/forecast_item_temp"-->
<!--        app:layout_constraintStart_toEndOf="@id/forecast_date"-->
<!--        app:layout_constraintTop_toTopOf="@id/forecast_item_icon" />-->

    <TextView
        android:id="@+id/forecast_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/forecast_item_high"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/forecast_date" />

    <TextView
        android:id="@+id/forecast_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:text="@string/forecast_item_low"
        app:layout_constraintStart_toEndOf="@id/forecast_high"
        app:layout_constraintTop_toTopOf="@id/forecast_high" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        android:layout_marginTop="26dp"
        android:text="@string/forecast_item_sunrise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        android:text="@string/forecast_item_sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunrise" />




    <!-- This is sample code of formatting the degrees on the left from lecture-->
<!--    <TextView-->
<!--        android:id="@+id/forecast_temp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingStart="24dp"-->
<!--        android:paddingEnd="24dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:text="72" />-->

<!--    Text views for all other components of the forecast item here-->

<!--    <TextView-->
<!--        android:id="@+id/sunrise"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        tools:text = "5am"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>